# Bullish

./: .env.example  .gitignore  README.md  pyproject.toml
config/: alert_templates.yaml  live_pilot.example.yaml  settings.example.yaml
docs/: LINUX_VM.md  PERSONAL_USE.md  WINDOWS_VM.md
scripts/: dbus_notify_debug.sh  paper_smoke_test.py  replay_fixtures.py  slippage_summary.py  watchdog.py
src/: config.py  executor.py  logging_setup.py  main.py  reliability.py
src/broker/: base.py  occ.py  tradier.py
src/extractor/: bridge.py  dbus_listener.py  win_listener.py
src/journal/: slippage.py
src/models/: trade_intent.py
src/pipeline/: dedup.py  fallback_parser.py  parser.py
src/risk/: guards.py  kill_switch.py
tests/: test_bridge.py  test_parser.py
tests/fixtures/: alerts.json
